--- a/newslyapp/src/app/features/admin/news/news-create/news-create.component.html
+++ b/newslyapp/src/app/features/admin/news/news-create/news-create.component.html
@@ -1,6 +1,8 @@
- <div class="text-off-white mb-30px">
-  <h1>Haber Oluştur</h1>
- </div>
-<div>
-  <app-form-editor (itemSubmit)="onSubmit($event)" [btnTitle]="'+ Ekle'"></app-form-editor>
-</div>
+<section>
+  <div class="text-off-white mb-30px">
+    <h1>Haber Oluştur</h1>
+  </div>
+  <div>
+    <app-form-editor (itemSubmit)="onSubmit($event)" [btnTitle]="'+ Ekle'"></app-form-editor>
+  </div>
+</section>
