--- a/newslyapp/src/app/features/admin/test/test.component.html
+++ b/newslyapp/src/app/features/admin/test/test.component.html
@@ -1,3 +1,5 @@
-<div class="width-full" style="border: 2px solid #8584f6;">
-    <h1 class="text-align-center text-off-white pt-30px pb-30px">Yapım Aşamasında...</h1>
-</div>
+<section>
+    <div class="width-full" style="border: 2px solid #8584f6;">
+        <h1 class="text-align-center text-off-white pt-30px pb-30px">Yapım Aşamasında...</h1>
+    </div>
+</section>
