--- a/newslyapp/src/app/shared/components/form-editor/form-editor.component.html
+++ b/newslyapp/src/app/shared/components/form-editor/form-editor.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formGroup" class="bg-indigo padding-25px border-radius-15px text-off-white" (ngSubmit)="onSubmit()" >
+<form [formGroup]="formGroup" class="bg-indigo text-off-white" (ngSubmit)="onSubmit()" >
   <div class="create-form">
     <div class="form-group">
       <label class="form-control-label" for="category">Kategori</label>
