--- a/newslyapp/src/app/shared/layouts/admin-layout/components/admin-sidebar/admin-sidebar.component.html
+++ b/newslyapp/src/app/shared/layouts/admin-layout/components/admin-sidebar/admin-sidebar.component.html
@@ -1,5 +1,4 @@
-<div class="sidebar" [ngClass]="{'open': isSidebarOpen}" (click)="onClose()">
-    <div class="height-100vh" style="background-color: #211d52">
+<div class="sidebar height-100vh bg-indigo" [ngClass]="{'open': isSidebarOpen}" (click)="onClose()">
         <div class="ml-20px mr-20px">
             <div class="height-auto pt-40px width-full">
                 <img class="width-full height-auto cursor-pointer" src="assets/img/admin/admin-logo.png"
@@ -52,5 +51,4 @@
                 </ul>
             </div>
         </div>
-    </div>
 </div>
