--- a/newslyapp/src/app/shared/layouts/user-layout/components/user-footer/user-footer.component.html
+++ b/newslyapp/src/app/shared/layouts/user-layout/components/user-footer/user-footer.component.html
@@ -1,19 +1,21 @@
-<div class="width-full">
-    <div class="mt-20px letter-spacing-custom-tight font-size-12px line-height-loose font-weight-medium">
-        <div class="mb-5px">
-            <span class="span-hover">Reklam</span>
-            <span class="span-hover">Hakkımızda</span>
-            <span class="span-hover">İletişim</span>
-            <span class="span-hover">Kullanım Koşulları</span>
-        </div>
-        <div class="mb-20px">
-            <span class="span-hover">Gizlilik Politikası</span>
-            <span class="span-hover">© 2024 Newsly</span>
-        </div>
-        <div class="text-align-center">
-            <i class="fa-brands fa-square-github "></i>
-            <i class="fa-brands fa-linkedin "></i>
-            <i class="fa-brands fa-instagram "></i>
+<footer>
+    <div class="width-full">
+        <div class="mt-20px letter-spacing-custom-tight font-size-12px line-height-loose font-weight-medium">
+            <div class="mb-5px">
+                <span class="span-hover">Reklam</span>
+                <span class="span-hover">Hakkımızda</span>
+                <span class="span-hover">İletişim</span>
+                <span class="span-hover">Kullanım Koşulları</span>
+            </div>
+            <div class="mb-20px">
+                <span class="span-hover">Gizlilik Politikası</span>
+                <span class="span-hover">© 2024 Newsly</span>
+            </div>
+            <div class="text-align-center">
+                <i class="fa-brands fa-square-github "></i>
+                <i class="fa-brands fa-linkedin "></i>
+                <i class="fa-brands fa-instagram "></i>
+            </div>
         </div>
     </div>
-</div>
+</footer>
