--- a/newslyapp/src/assets/css/_custom.scss
+++ b/newslyapp/src/assets/css/_custom.scss
@@ -184,3 +184,15 @@ $outline-values: (
 .border-radius-50 {
     border-radius: 50%;
 }
+
+.margin-auto {
+    margin: 0 auto;
+  }
+  
+  .list-style-none{
+    list-style: none;
+  }
+  
+  .cursor-pointer{
+    cursor: pointer;
+  }
