--- a/newslyapp/src/app/features/admin/news/news-update/news-update.component.html
+++ b/newslyapp/src/app/features/admin/news/news-update/news-update.component.html
@@ -1,6 +1,9 @@
-<div class="text-off-white mb-30px">
+<section>
+  <div class="text-off-white mb-30px">
     <h1>Haber Ayarları</h1>
-   </div>
+  </div>
+
   <div>
     <app-form-editor (itemSubmit)="onSubmit($event)" [news]="news" [btnTitle]="'Güncelle'"></app-form-editor>
   </div>
+</section>
