--- a/newslyapp/src/app/features/users/news/news-list/news-list.component.html
+++ b/newslyapp/src/app/features/users/news/news-list/news-list.component.html
@@ -1,18 +1,28 @@
-<div class="news-list" *ngIf="news.length > 0">
-  <div class="theme-div border-radius-6px padding-30px mb-35px responsive-slider">
-      <app-slider [news]="news"></app-slider>
-  </div>
-  <div class="d-flex">
-      <div class="card">
-          <app-news-container [news]="news"></app-news-container>
-      </div>
-      <div class="popular">
-          <div style="float: right;">
-              <div class="mb-40px">
-                  <user-footer></user-footer>
-              </div>
-              <app-popular-news [news]="news" ></app-popular-news>
-          </div>
-      </div>
-  </div>
+@if(news.length > 0){
+<div class="news-list">
+    <section>
+        <div class="theme-div border-radius-6px padding-30px mb-35px responsive-slider">
+            <app-slider [news]="news"></app-slider>
+        </div>
+    </section>
+
+    <section>
+        <div class="d-flex">
+            <div class="card">
+                <section>
+                    <app-news-container [news]="news"></app-news-container>
+                </section>
+            </div>
+
+            <aside class="popular">
+                <div style="float: right;">
+                    <div class="mb-40px">
+                        <user-footer></user-footer>
+                    </div>
+                    <app-popular-news [news]="news"></app-popular-news>
+                </div>
+            </aside>
+        </div>
+    </section>
 </div>
+}
