--- a/newslyapp/src/app/shared/components/location/location.component.html
+++ b/newslyapp/src/app/shared/components/location/location.component.html
@@ -1,5 +1,8 @@
-<div class="d-flex cursor-pointer" *ngIf="city">
-  <img src="assets/img/header/cloudy.png" class="width-22px">
-  <p class="theme-text ml-5px line-height-sm font-size-11px font-weight-bold letter-spacing-spaced text-uppercase">{{ city }} 22°
-  </p>
-</div>
+@if(city){
+  <div class="d-flex align-items-center cursor-pointer">
+    <img [src]="icon" style="width: 30px; height: auto;">
+    <p class="theme-text ml-5px line-height-xsm font-size-11px font-weight-bold letter-spacing-spaced text-uppercase">{{
+    city }} {{temperature}}°C
+    </p>
+  </div>
+}
