--- a/newslyapp/src/app/shared/components/spinner/spinner.component.html
+++ b/newslyapp/src/app/shared/components/spinner/spinner.component.html
@@ -1,3 +1,5 @@
-<div *ngIf="isLoading()" class="spinner-overlay">
+@if(isLoading()){
+  <div class="spinner-overlay">
     <div class="spinner"></div>
   </div>
+}
