--- a/newslyapp/src/app/shared/layouts/admin-layout/components/admin-sidebar/admin-sidebar.component.scss
+++ b/newslyapp/src/app/shared/layouts/admin-layout/components/admin-sidebar/admin-sidebar.component.scss
@@ -1,57 +1,41 @@
 .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 10;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1), 0 8px 20px rgba(0, 0, 0, 0.15);
-    overflow-y: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1), 0 8px 20px rgba(0, 0, 0, 0.15);
+  overflow-y: auto;
+  width: 245px;
+  height: 100%;
+  transform: translateX(0);
+  
+  @media (min-width: 1300px) {
     width: 245px;
-    height: 100%;
     transform: translateX(0);
- 
-    @media (min-width: 1300px) {
-      width: 245px;
+  }
+
+  @media (max-width: 1300px) {
+    transform: translateX(-100%);
+    transition: transform 0.5s ease-in-out;
+
+    &.open {
       transform: translateX(0);
     }
-  
-    @media (min-width: 501px) and (max-width: 1300px) {
+
+    &:not(.open) {
       transform: translateX(-100%);
-      transition: transform 0.5s ease-in-out;
-  
-      &.open {
-        transform: translateX(0);
-        background: rgba(0, 0, 0, 0.7);
-      }
-  
-      &:not(.open) {
-        transform: translateX(-100%);
-        background: transparent;
-      }
-    }
-  
-    @media (max-width: 500px) {
-      width: 100%;
-      padding-right: 20%;
-      overflow-x: hidden;
-      transform: translateX(-100%);
-      transition: transform 0.5s ease-in-out;
-  
-      &.open {
-        transform: translateX(0);
-        background: rgba(0, 0, 0, 0.7);
-      }
-  
-      &:not(.open) {
-        transform: translateX(-100%);
-        background: transparent;
-      }
     }
 
-    .active {
-      background: linear-gradient(to right, #616ae9, #8584f6);
-      border-radius: 5px;
-      color: #e4e4e4;
-      transition: background 0.5s, color 0.5s;
+    @media (max-width: 500px) {
+      width: calc(100% - 20%);
+      overflow-x: hidden;
     }
   }
 
+  .active {
+    background: linear-gradient(to right, #616ae9, #8584f6);
+    border-radius: 5px;
+    color: #e4e4e4;
+    transition: background 0.5s, color 0.5s;
+  }
+}
