--- a/newslyapp/src/app/shared/layouts/user-layout/components/user-sidebar/user-sidebar.component.scss
+++ b/newslyapp/src/app/shared/layouts/user-layout/components/user-sidebar/user-sidebar.component.scss
@@ -14,52 +14,35 @@
     transform: translateX(0);
   }
 
-  @media (min-width: 501px) and (max-width: 1300px) {
+  @media (max-width: 1300px) {
     transform: translateX(-100%);
     transition: transform 0.5s ease-in-out;
 
     &.open {
       transform: translateX(0);
-      background: rgba(0, 0, 0, 0.7);
     }
 
     &:not(.open) {
       transform: translateX(-100%);
-      background: transparent;
+    }
+
+    @media (max-width: 500px) {
+      width: calc(100% - 20%);
+      overflow-x: hidden;
     }
   }
 
-  @media (max-width: 500px) {
-    width: 100%;
-    padding-right: 20%;
-    overflow-x: hidden;
-    transform: translateX(-100%);
-    transition: transform 0.5s ease-in-out;
-
-    &.open {
-      transform: translateX(0);
-      background: rgba(0, 0, 0, 0.7);
-    }
-
-    &:not(.open) {
-      transform: translateX(-100%);
-      background: transparent;
-    }
-  }
-}
-
-.sidebar-category {
-  transition: 0.5s;
-
-  &:hover {
-    background-color: #232629;
-    color: #838282;
+  .sidebar-category {
     transition: 0.5s;
-  }
-}
 
-.active {
-  background-color: #232629;
-  color: #e4e4e4;
-  transition: 0.5s;
+    &:hover {
+      background-color: #232629;
+      color: #838282;
+    }
+
+    .active {
+      background-color: #232629;
+      color: #e4e4e4;
+    }
+  }
 }
